--- a/Chapter3_Getting_started_with_neural_networks.ipynb
+++ b/Chapter3_Getting_started_with_neural_networks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter3_Getting_started_with_neural_networks.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNDjWT9P2TpK+ICdH2EXFmn",
+      "authorship_tag": "ABX9TyNQXDZBkbrCI4PX6AbSIZJe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1179,6 +1179,197 @@
       },
       "source": [
         "#3.4.4 Validating your approach"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nP0Z1g4DvrYr",
+        "colab_type": "text"
+      },
+      "source": [
+        "In order to monitor during training the accuracy of the model on data it has never seen before, you'll create a validation set by setting apart 10,000 samples from the orginal training data."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gl2mZLGKwBBM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x_val = x_train[:10000]\n",
+        "partial_x_train = x_train[10000:]\n",
+        "y_val = y_train[:10000]\n",
+        "partial_y_train = y_train[10000:]"
+      ],
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OgtY6x91wj9o",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FHMJtmMDwlxZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 775
+        },
+        "outputId": "2ca57e82-6efb-4c2e-e1bb-6d6043d18fba"
+      },
+      "source": [
+        "model.compile(optimizer='rmsprop',\n",
+        "              loss='binary_crossentropy',\n",
+        "              metrics=['acc'])\n",
+        "\n",
+        "history = model.fit(partial_x_train,\n",
+        "                    partial_y_train,\n",
+        "                    epochs=20,\n",
+        "                    batch_size=512,\n",
+        "                    validation_data=(x_val, y_val))"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Train on 15000 samples, validate on 10000 samples\n",
+            "Epoch 1/20\n",
+            "15000/15000 [==============================] - 3s 186us/step - loss: 0.5118 - acc: 0.7874 - val_loss: 0.3816 - val_acc: 0.8730\n",
+            "Epoch 2/20\n",
+            "15000/15000 [==============================] - 2s 154us/step - loss: 0.3022 - acc: 0.9049 - val_loss: 0.3087 - val_acc: 0.8829\n",
+            "Epoch 3/20\n",
+            "15000/15000 [==============================] - 2s 154us/step - loss: 0.2210 - acc: 0.9287 - val_loss: 0.2990 - val_acc: 0.8791\n",
+            "Epoch 4/20\n",
+            "15000/15000 [==============================] - 2s 152us/step - loss: 0.1730 - acc: 0.9439 - val_loss: 0.2749 - val_acc: 0.8890\n",
+            "Epoch 5/20\n",
+            "15000/15000 [==============================] - 2s 154us/step - loss: 0.1433 - acc: 0.9537 - val_loss: 0.2811 - val_acc: 0.8855\n",
+            "Epoch 6/20\n",
+            "15000/15000 [==============================] - 2s 149us/step - loss: 0.1140 - acc: 0.9658 - val_loss: 0.3252 - val_acc: 0.8755\n",
+            "Epoch 7/20\n",
+            "15000/15000 [==============================] - 2s 149us/step - loss: 0.0994 - acc: 0.9705 - val_loss: 0.3091 - val_acc: 0.8845\n",
+            "Epoch 8/20\n",
+            "15000/15000 [==============================] - 2s 148us/step - loss: 0.0804 - acc: 0.9774 - val_loss: 0.3275 - val_acc: 0.8820\n",
+            "Epoch 9/20\n",
+            "15000/15000 [==============================] - 2s 149us/step - loss: 0.0690 - acc: 0.9816 - val_loss: 0.3603 - val_acc: 0.8759\n",
+            "Epoch 10/20\n",
+            "15000/15000 [==============================] - 2s 148us/step - loss: 0.0542 - acc: 0.9873 - val_loss: 0.3843 - val_acc: 0.8729\n",
+            "Epoch 11/20\n",
+            "15000/15000 [==============================] - 2s 145us/step - loss: 0.0460 - acc: 0.9905 - val_loss: 0.4096 - val_acc: 0.8767\n",
+            "Epoch 12/20\n",
+            "15000/15000 [==============================] - 2s 148us/step - loss: 0.0374 - acc: 0.9912 - val_loss: 0.4371 - val_acc: 0.8758\n",
+            "Epoch 13/20\n",
+            "15000/15000 [==============================] - 2s 148us/step - loss: 0.0315 - acc: 0.9930 - val_loss: 0.4626 - val_acc: 0.8731\n",
+            "Epoch 14/20\n",
+            "15000/15000 [==============================] - 2s 146us/step - loss: 0.0224 - acc: 0.9971 - val_loss: 0.4942 - val_acc: 0.8721\n",
+            "Epoch 15/20\n",
+            "15000/15000 [==============================] - 2s 145us/step - loss: 0.0189 - acc: 0.9973 - val_loss: 0.5268 - val_acc: 0.8679\n",
+            "Epoch 16/20\n",
+            "15000/15000 [==============================] - 2s 142us/step - loss: 0.0170 - acc: 0.9969 - val_loss: 0.5598 - val_acc: 0.8667\n",
+            "Epoch 17/20\n",
+            "15000/15000 [==============================] - 2s 143us/step - loss: 0.0116 - acc: 0.9989 - val_loss: 0.5946 - val_acc: 0.8675\n",
+            "Epoch 18/20\n",
+            "15000/15000 [==============================] - 2s 143us/step - loss: 0.0090 - acc: 0.9994 - val_loss: 0.6555 - val_acc: 0.8588\n",
+            "Epoch 19/20\n",
+            "15000/15000 [==============================] - 2s 143us/step - loss: 0.0086 - acc: 0.9989 - val_loss: 0.6642 - val_acc: 0.8633\n",
+            "Epoch 20/20\n",
+            "15000/15000 [==============================] - 2s 143us/step - loss: 0.0046 - acc: 0.9998 - val_loss: 0.8014 - val_acc: 0.8493\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0EVDxQplxz41",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "history_dict = history.history"
+      ],
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rNjVs-Nhx-C5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "c83b9224-b2f4-4dd6-f4fc-714568060d28"
+      },
+      "source": [
+        "history_dict.keys()"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_keys(['val_loss', 'val_acc', 'loss', 'acc'])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d_N2-ydXySOX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "2c1db29a-f8c1-4601-9f31-7a4e7eff0215"
+      },
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "history_dict = history.history\n",
+        "loss_values = history_dict['loss']\n",
+        "val_loss_values = %history['val_loss']\n",
+        "\n",
+        "epochs = raneg(1, len(loss_values) + 1)\n",
+        "plt.plot(epochs, loss_values, 'bo', label='Training loss')\n",
+        "plt.plot(epochs, val_loss_values, 'b', label='Validation loss')\n",
+        "plt.title('Training and validation loss')\n",
+        "plt.xlabel('Epochs')\n",
+        "plt.ylabel('Loss')\n",
+        "plt.legend()\n",
+        "\n",
+        "plt.show()"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "UsageError: Line magic function `%history['val_loss']` not found.\n"
+          ],
+          "name": "stderr"
+        }
       ]
     }
   ]
