starting the reuters example

--- a/Chapter3_Getting_started_with_neural_networks.ipynb
+++ b/Chapter3_Getting_started_with_neural_networks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter3_Getting_started_with_neural_networks.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOAJFMGfstF/a3orLmVXGer",
+      "authorship_tag": "ABX9TyMgli5PjrbRL0jym474L8zx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1512,6 +1512,408 @@
       "source": [
         "The final results acheive an accuracy of 86%."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FbUpgvrvT2Sk",
+        "colab_type": "text"
+      },
+      "source": [
+        "#3.4.5 Using a trained network to generate predictions on new data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C1D-hqCOUKm7",
+        "colab_type": "text"
+      },
+      "source": [
+        "You can generate the likelihood of reviews being positive by using the *predict* method:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E6u3rLulUYpo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 143
+        },
+        "outputId": "2e1e6011-5824-4be0-9914-a1632081033c"
+      },
+      "source": [
+        "model.predict(x_test)"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.13206396],\n",
+              "       [0.9989408 ],\n",
+              "       [0.35658225],\n",
+              "       ...,\n",
+              "       [0.05474111],\n",
+              "       [0.02661976],\n",
+              "       [0.37763023]], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "02RLfystYGBc",
+        "colab_type": "text"
+      },
+      "source": [
+        "#3.4.6 Further experiments"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pTHppvxZYuVG",
+        "colab_type": "text"
+      },
+      "source": [
+        "fill in later"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9vngs0bHYwbC",
+        "colab_type": "text"
+      },
+      "source": [
+        "#3.4.7 Wrapping up"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3m9BB_l9Y1Zq",
+        "colab_type": "text"
+      },
+      "source": [
+        "Fill in later"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5oTCDDQlY5cf",
+        "colab_type": "text"
+      },
+      "source": [
+        "#3.5 Classifying newswires: a multiclass classification example"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RDhC9dxxZhco",
+        "colab_type": "text"
+      },
+      "source": [
+        "In the previous section, you saw how to classify vector inputs into two mutually exclusive classes using a densely connected neural network. But what happens when you have more than two classes?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OTKPYb0SZ66h",
+        "colab_type": "text"
+      },
+      "source": [
+        "In this section, you'll build a network to classify Reuters newswires into 46 mutually exclusive topics. Because you have many classes, this problem is an instance of *multiclass classification*; and because each data point should be classified into only one category, the problem is more specifically an instance of *single-label, multiclass classification*. If each data point could belong to multiple categories, you'd be facing a *multilabel, multiclass classification* problem."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ksrorcK8bZDg",
+        "colab_type": "text"
+      },
+      "source": [
+        "#3.5.1 The Reuters dataset"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NsWpGTi0dLoi",
+        "colab_type": "text"
+      },
+      "source": [
+        "You'll work with the *Reuters* dataset, a set of short newswires and their topics, published by Reuters in 1986. It's a simple, widely used toy dataset for text classification. There are 46 different topics; some topics are more represented than others, but each topic has at least 10 examples in the training set."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KkKALCDvxQc_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "774b4dc1-7c49-42ad-f537-a2f9e9f94cdc"
+      },
+      "source": [
+        "from keras.datasets import reuters\n",
+        "\n",
+        "(train_data, train_labels), (test_data, test_labels) = reuters.load_data(num_words=10000)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://s3.amazonaws.com/text-datasets/reuters.npz\n",
+            "2113536/2110848 [==============================] - 1s 1us/step\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Yd5oVruvxwLv",
+        "colab_type": "text"
+      },
+      "source": [
+        "I am restricting the the data to the 10,000 most frequently occurring words found in the data with the argument num_words=10000."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IXYgx7fiyYTo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "001d1416-8a91-4b48-d613-75733ef923f1"
+      },
+      "source": [
+        "len(train_data)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8982"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dtozn2-EycsB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "d71dd097-cb5c-4173-fc64-aaebdec8cdef"
+      },
+      "source": [
+        "len(test_data)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2246"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ng0nOplZyhSs",
+        "colab_type": "text"
+      },
+      "source": [
+        "Each example is a list of integers:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FUTFyQYMynuv",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 575
+        },
+        "outputId": "d3f1afa0-fc92-4c75-c530-00ef55280556"
+      },
+      "source": [
+        "train_data[10]"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1,\n",
+              " 245,\n",
+              " 273,\n",
+              " 207,\n",
+              " 156,\n",
+              " 53,\n",
+              " 74,\n",
+              " 160,\n",
+              " 26,\n",
+              " 14,\n",
+              " 46,\n",
+              " 296,\n",
+              " 26,\n",
+              " 39,\n",
+              " 74,\n",
+              " 2979,\n",
+              " 3554,\n",
+              " 14,\n",
+              " 46,\n",
+              " 4689,\n",
+              " 4329,\n",
+              " 86,\n",
+              " 61,\n",
+              " 3499,\n",
+              " 4795,\n",
+              " 14,\n",
+              " 61,\n",
+              " 451,\n",
+              " 4329,\n",
+              " 17,\n",
+              " 12]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cxbeKMFXy8nU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "85eb5ef0-5b28-424f-9f98-2a3c2b2a6e6a"
+      },
+      "source": [
+        "word_index = reuters.get_word_index()\n",
+        "reverse_word_index = dict([value, key ] for (key, value) in word_index.items())\n",
+        "decoded_newswire = ' '.join([reverse_word_index.get(i - 3, '?') for i in train_data[0]])"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://s3.amazonaws.com/text-datasets/reuters_word_index.json\n",
+            "557056/550378 [==============================] - 1s 2us/step\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M5kqBvLrzvjC",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "53818165-5ec9-4e78-f28a-6398e72a52d5"
+      },
+      "source": [
+        "train_labels[10]"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "33K0T5CV0GtM",
+        "colab_type": "text"
+      },
+      "source": [
+        "#3.5.2 Preparing the data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AdWxiivI0Fe7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
