Building the network

--- a/Chapter3_Getting_started_with_neural_networks.ipynb
+++ b/Chapter3_Getting_started_with_neural_networks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter3_Getting_started_with_neural_networks.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMgli5PjrbRL0jym474L8zx",
+      "authorship_tag": "ABX9TyNKzMwobjdapEYzBh1Q6Mru",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1903,6 +1903,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EhQdKQ8S2Uyl",
+        "colab_type": "text"
+      },
+      "source": [
+        "We can use the same code snippet to vectorize the data."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "AdWxiivI0Fe7",
@@ -1910,10 +1920,85 @@
         "colab": {}
       },
       "source": [
-        ""
+        "import numpy as np\n",
+        "\n",
+        "def vectorize_sequences(sequences, dimension=10000):\n",
+        "    results = np.zeros((len(sequences), dimension))\n",
+        "    for i, sequence in enumerate(sequences):\n",
+        "        results[i, sequence] = 1\n",
+        "    return results\n",
+        "\n",
+        "x_train = vectorize_sequences(train_data)\n",
+        "x_test = vectorize_sequences(test_data)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bLjvxApk3gcV",
+        "colab_type": "text"
+      },
+      "source": [
+        "In terms of vectorizing the labels we will use one-hot encoding. One-hot encoding is a widely used for categorical data, also called *categorical encoding*. Here's an example:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xnhgvbTCCLc1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def to_one_hot(labels, dimension=46):\n",
+        "    results = np.zeros((len(labels), dimension))\n",
+        "    for i, label in enumerate(labels):\n",
+        "        results[i, label] = 1\n",
+        "    return results\n",
+        "\n",
+        "one_hot_train_labels = to_one_hot(train_labels)\n",
+        "one_hot_test_labels = to_one_hot(train_labels)"
+      ],
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pQ7MMuGSDdsD",
+        "colab_type": "text"
+      },
+      "source": [
+        "Keras has this functionality built in:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "J_0vzonGDlRN",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "from keras.utils.np_utils import to_categorical\n",
+        "\n",
+        "one_hot_train_labels = to_categorical(train_labels)\n",
+        "one_hot_test_labels = to_categorical(test_labels)\n",
+        "\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EH_Ho3BBEBIE",
+        "colab_type": "text"
+      },
+      "source": [
+        "#3.5.3 Building your network"
+      ]
     }
   ]
 }
