--- a/Chapter3_Getting_started_with_neural_networks.ipynb
+++ b/Chapter3_Getting_started_with_neural_networks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter3_Getting_started_with_neural_networks.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNKzMwobjdapEYzBh1Q6Mru",
+      "authorship_tag": "ABX9TyM+eC/VPij7j9kKQx+KqjP6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1998,6 +1998,91 @@
       },
       "source": [
         "#3.5.3 Building your network"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YPKK8oJiF4YZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "This topic-classification problem is similar to our previous classification problem. The new constraint here: the number of output classes has gone from 2 to 46. The dimensionality of the output space is much larger."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "877R3Da_GdjQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "As we have a larger number of output classes we need to up the dimensionality of our Dense layers so we don't lose relevant information between layers. We will go with 64 units."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LXcBCpSVG36V",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from keras import models\n",
+        "from keras import layers\n",
+        "\n",
+        "model = models.Sequential()\n",
+        "model.add(layers.Dense(64, activation='relu', input_shape=(10000,)))\n",
+        "model.add(layers.Dense(64, activation='relu'))\n",
+        "model.add(layers.Dense(46, activation='softmax'))\n"
+      ],
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xAYmV6cKHnEo",
+        "colab_type": "text"
+      },
+      "source": [
+        "* The last layer of the network has a size of 46. For each input sample, the network will output a 46-dimensional vector. Each entry will encode a different output class.\n",
+        "* The softmax activation will output a *probability distribution* over the 46 different output classes-for every input sample. The 46 scores will sum to 1."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lIKE30DrIuK6",
+        "colab_type": "text"
+      },
+      "source": [
+        "The best loss function to use in this case is *categorical_crossentropy* It measures the distance between two probability distributions: here, between the probability distribution output by the network and the true distribution of the labels. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mtnTjzqpJgYY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model.compile(optimizer='rmsprop',\n",
+        "              loss='categorical_crossentropy',\n",
+        "              metrics=['accuracy'])"
+      ],
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8OAC4b4VKBm9",
+        "colab_type": "text"
+      },
+      "source": [
+        "#3.5.4 Validating your approach"
       ]
     }
   ]
