snippet for data normalization

--- a/Chapter3_Getting_started_with_neural_networks.ipynb
+++ b/Chapter3_Getting_started_with_neural_networks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter3_Getting_started_with_neural_networks.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOAkExhC+2+PtGUOLvSH2kR",
+      "authorship_tag": "ABX9TyMIVZajcL8xcrdPA/kLTbBx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2661,6 +2661,37 @@
           "execution_count": 180
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "okOJW7fsP4KN",
+        "colab_type": "text"
+      },
+      "source": [
+        "#3.6.2 Preparing the data \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EODvTkaxaSzd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "mean = train_data.mean(axis=0)\n",
+        "train_data -= mean\n",
+        "std = train_data.std(axis=0)\n",
+        "train_data /= std\n",
+        "\n",
+        "test_data -= mean\n",
+        "test_data /= std"
+      ],
+      "execution_count": 183,
+      "outputs": []
     }
   ]
 }
