--- a/Chapter3_Getting_started_with_neural_networks.ipynb
+++ b/Chapter3_Getting_started_with_neural_networks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter3_Getting_started_with_neural_networks.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMIVZajcL8xcrdPA/kLTbBx",
+      "authorship_tag": "ABX9TyNYiOXq/QHb7G6EHL8QKoyZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2494,7 +2494,7 @@
         "\n",
         "(train_data, train_targets), (test_data, test_targets) = boston_housing.load_data()"
       ],
-      "execution_count": 177,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2530,7 +2530,7 @@
       "source": [
         "train_data.shape"
       ],
-      "execution_count": 178,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2560,7 +2560,7 @@
       "source": [
         "test_data.shape"
       ],
-      "execution_count": 179,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2610,7 +2610,7 @@
       "source": [
         "train_targets"
       ],
-      "execution_count": 180,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2690,7 +2690,39 @@
         "test_data -= mean\n",
         "test_data /= std"
       ],
-      "execution_count": 183,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ioJdGvbtcb7E",
+        "colab_type": "text"
+      },
+      "source": [
+        "#3.6.3 Building your network"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QNSvpEfTcjEp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from keraas import models\n",
+        "from keras import layers\n",
+        "\n",
+        "def build_model():\n",
+        "    model = models.Sequential()\n",
+        "    model.add(layers.Dense(64,activation='relu', input_shape(train_data.shape[1],)))\n",
+        "    model.add(layers.Dense(64, activation='relu'))\n",
+        "    modol.add(layers.Dense(1))\n",
+        "    model.compile(optimizer='rmsprop', loss='mse', metrics=['mae'])\n",
+        "    return model"
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
