Another training loop

--- a/Chapter3_Getting_started_with_neural_networks.ipynb
+++ b/Chapter3_Getting_started_with_neural_networks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter3_Getting_started_with_neural_networks.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMMdk0KJZhoQTynYkCBV84x",
+      "authorship_tag": "ABX9TyNs2ws0GZ1Vq0bcpgzVXWxA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2625,14 +2625,80 @@
       "metadata": {
         "id": "Q-wrsqfPerjK",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "2f326ca6-cb60-4019-ca56-a42ded109d51"
       },
       "source": [
+        "all_scores\n",
+        "np.mean(all_scores)"
+      ],
+      "execution_count": 230,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.3420081436634064"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 230
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DilLc9o0sY_z",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "11c30487-f92c-495d-b984-c3953605991b"
+      },
+      "source": [
+        "import numpy as np\n",
         "\n",
-        "    "
+        "k = 4\n",
+        "num_val_samples = len(train_data) // k\n",
+        "num_epochs = 500\n",
+        "all_mae_histories = []\n",
+        "for i in range(k):\n",
+        "    print('processing fold #', i)\n",
+        "    val_data = train_data[i * num_val_samples: (i + 1) * num_val_samples]\n",
+        "    val_targets = train_targets[i * num_val_samples: (i + 1) * num_val_samples]\n",
+        "\n",
+        "    partial_train_data = np.concatenate(\n",
+        "        [train_data[:i * num_val_samples],\n",
+        "         train_data[(i + 1) * num_val_samples:]],\n",
+        "        axis=0)\n",
+        "    partial_train_targets = np.concatenate(\n",
+        "        [train_targets[:i * num_val_samples],\n",
+        "         train_targets[(i + 1) * num_val_samples:]],\n",
+        "        axis=0)\n",
+        "\n",
+        "    model = build_model()\n",
+        "    history = model.fit(partial_train_data, partial_train_targets,\n",
+        "              epochs=num_epochs, batch_size=1, verbose=0)\n",
+        "    mae_history = history.history['val_mean_absolute_error']\n",
+        "    all_mae_histories.append(mae_history)\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "processing fold # 0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
