More on learning

--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOPr6ctYc6XHNZ+Jfhipy82",
+      "authorship_tag": "ABX9TyP/fB6UorEh1iMUJPVzHGZ4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,6 +42,69 @@
       },
       "source": [
         "#4.1 Four branches of machine learning"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PB5XyxSSPMCQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "In the previous examples, we covered: binary classification, multiclass classification, and scalar regression. All three fall under *supervised learning*, where the goal is to learn the relationship between training inputs and training targets."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WsxUrCAuPuOk",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4.1.1 Supervised learning "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NfDKY1GXP-Y1",
+        "colab_type": "text"
+      },
+      "source": [
+        "Supervised learning consists of learning to map input data to known targets(also called *annotations*), given a set of examples."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EuZ9nC5YQdFR",
+        "colab_type": "text"
+      },
+      "source": [
+        "Although supervised learning mostly consists of classification and regression, there are more exotic variants as well:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FDg3rhKIQsFG",
+        "colab_type": "text"
+      },
+      "source": [
+        "* Sequence generation -- Given a picture, predict a caption describing it. Sequence generation can sometimes be reformulated as a series of classification (such as repeatedly predicting a word or token in a sequence).\n",
+        "* *Syntax tree prediction* -- Given a sentence , predict its decomposition into a syntax tree.\n",
+        "* *Object detection*--Given a picture, draw a bounding box around certain objects inside the picture. This can also be expressed as a classification problem(given many candidate bounding boxes, classify the contents of each one) or as a joint classification and regression problem, where the bounding-box coordinates are predicted via vector regression.\n",
+        "* *Image segmentation*--Given a picture, draw a pixel-level mask on a specific object."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ttgmCeIzSyTO",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4.1.2 Unsupervised learning"
       ]
     },
     {
