--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP/fB6UorEh1iMUJPVzHGZ4",
+      "authorship_tag": "ABX9TyNk0+cSOqoeeIZeWWtPYss9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,6 +105,66 @@
       },
       "source": [
         "#4.1.2 Unsupervised learning"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "11XkP7d_UGE5",
+        "colab_type": "text"
+      },
+      "source": [
+        "Unsupervised learning is the bread and butter of data analytics, and it's often a necessary step in better understanding a dataset before attempting to solve a supervised-learning problem. *Dimensionality reduction* and *clustering* are well-known categories of unsupervised learning."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GiBRtMkuU6OW",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4.1.3 Self-supervised learning"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3sQcP_DNVLk3",
+        "colab_type": "text"
+      },
+      "source": [
+        "Self-supervised learning is supervised learning without human-annotated labels--you can think of it as supervised learning without any humans in the loop. Labels are still involved, but they're generated from the input data, typically using a heuristic algorithm."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5KoF4LBEXc74",
+        "colab_type": "text"
+      },
+      "source": [
+        "For instance, *autoencoders* are a well-known instance of self-supervised learning, where the generated targets are the input, unmodified. In the same way, trying to predict the next frame in a video, given past frames, or the next word in a text, given previous words, are instances of self-supervised learning. Note that the distinction between supervised, self-supervised, and unsupervised learning can be blurry sometimes-- these categories are more of a continuum withouth solid borders. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "A0Wf5bilYmSt",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4.1.4 Reinforcement learning"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sqf03I1PYtlz",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     },
     {
